Modify flavour-device model to take into account that a flavour can have more than one of a particular device. Update cloud similarly.